<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/course_title_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDetailDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/duration"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDetailFees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/fees"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailDuration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDetailDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/description_placeholder"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailFees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnApplyNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_now"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
